# dashboardcwv

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app-specs.md  data-collection.md  docker-compose.yml  pyproject.toml
database/: cwv_database.sql
src/: __init__.py
src/application/: __init__.py
src/application/dto/: __init__.py  dashboard_dtos.py  execution_summary.py
src/application/use_cases/: __init__.py  collect_pagespeed_data_use_case.py
src/application/use_cases/dashboard/: __init__.py  get_competitor_data_use_case.py  get_filter_options_use_case.py  get_performance_data_use_case.py
src/dashboard/: __init__.py  main.py
src/dashboard/components/: charts.py  competitors_section.py  filters.py  performance_section.py  styles.py
src/domain/: __init__.py  exceptions.py  pagespeed_insights_metrics.py
src/domain/entities/: __init__.py  core_web_vitals.py  url_entity.py
src/domain/repositories/: __init__.py  brand_repository.py  core_web_vitals_repository.py  dashboard_repository.py  url_repository.py
src/infrastructure/: __init__.py
src/infrastructure/api/pagespeed/: __init__.py  pagespeed_client_facade.py
src/infrastructure/database/: __init__.py  connection.py
src/infrastructure/di/: __init__.py  container.py
src/infrastructure/logging/: __init__.py  logger_config.py
src/infrastructure/repositories/: __init__.py  mysql_brand_repository.py  mysql_core_web_vitals_repository.py  mysql_dashboard_repository.py  mysql_url_repository.py
src/jobs/: __init__.py  collect_pagespeed_data.py
tests/: conftest.py
(+18 files in other folders)
