[project]
name = "dashboardcwv"
version = "0.1.0"
description = "Core Web Vitals Dashboard with data collection and visualization"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "streamlit>=1.39.0",
    "mysql-connector-python>=9.1.0",
    "dependency-injector>=4.42.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
